--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -2,140 +2,162 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Office</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css" />
-
-
-    <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png" />
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css"/>
+    <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
 </head>
-
 
 <body>
 
-    <!-- Header -->
-
-    <nav id="navbar-section" class="navbar navbar-default navbar-static-top navbar-sticky" role="navigation">
-        <div class="container">
-
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                    <span class="sr-only">菜单</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand wow fadeInDownBig" href="index.html"><img src="images/slider/Office.png" width="100" alt="Office" /></a>
-            </div>
-
-            <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
-                <ul class="nav navbar-nav pull-right">
-                    <li>
-                        <a href="index.html">首页</a>
-                    </li>
-                    <li>
-                        <a href="demand.html">需求社区</a>
-                    </li>
-                    <li class="active">
-                        <a href="news.html">新闻资讯</a>
-                    </li>
-                    <li>
-                        <a href="statistic.html">交易数据</a>
-                    </li>
-                    <li th:if="!${userLogin}">
-                        <a href="login.html"><span>登录</span></a>
-                    </li>
-                    <li th:if="${userLogin}">
-                        <a href="login.html">欢迎！<span th:text="${user.name}"></span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <!--End Header -->
-    <!-- Main Container -->
-
-    <div class="row container-kamn">
-        <img src="images/slider/slide1.jpg" class="blog-post" alt="Feature-img" align="right" width="100%" />
-    </div>
-
-    <div id="banners"></div>
+<nav id="navbar-section" class="navbar navbar-default navbar-static-top navbar-sticky" role="navigation">
     <div class="container">
-        <div class="row">
-            <div class="side-left col-sm-4 col-md-4">
 
-                <h3 class="lead"> About our Firm : </h3>
-                <hr />
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target=".navbar-responsive-collapse">
+                <span class="sr-only">菜单</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand wow fadeInDownBig" href="index.html"><img src="images/slider/Office.png" width="100"
+                                                                             alt="Office"/></a>
+        </div>
 
-                <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
-                <a href="#anchor1"> Our Firm's History</a><br />
-                <a href="#anchor2"> Philosophy</a><br />
-                <a href="#anchor3">Media / In the Press</a><br />
-                <br />
-                <h4>2002 - LOREM IPSUM DOLOR :</h4>
-                <hr  /> Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.
-            </div>
-            <div class="col-sm-8 col-md-8">
-                <h3 class="lead" id="anchor1"> Our Firm's History </h3>
-                <hr  />
-                <p>
-                    Curabitur vulputate, ligula lacinia scelrisque tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class aptent taeraciti sociosqu ad litora torquent. Hibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a dolor sit amet lipsum enim in.
-                </p>
-
-                <h4>2002 - LOREM IPSUM DOLOR</h4>
-                <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.</p>
-
-                <h4>2007 - VIVAMUS HENDERIT</h4>
-                <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
-
-                <h4>2008 - PRAESENT ID METUS</h4>
-                <p>
-                    Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio.
-                </p>
-                <h3 class="lead" id="anchor2">Our Philosophy:</h3>
-                <p>
-                    Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc. <br />
-                </p>
-
-                <h3 class="lead" id="anchor3">In the Press:</h3>
-                <blockquote>
-                    <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
-                </blockquote>
-                <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
-                <br /><br />
-                <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p>
-            </div>
+        <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav pull-right">
+                <li>
+                    <a href="index.html">首页</a>
+                </li>
+                <li>
+                    <a href="demand.html">需求社区</a>
+                </li>
+                <li class="active">
+                    <a href="news.html">新闻资讯</a>
+                </li>
+                <li>
+                    <a href="statistic.html">交易数据</a>
+                </li>
+                <li th:if="!${userLogin}">
+                    <a href="login.html"><span>登录</span></a>
+                </li>
+                <li th:if="${userLogin}">
+                    <a href="login.html">欢迎！<span th:text="${user.name}"></span></a>
+                </li>
+            </ul>
         </div>
     </div>
+</nav>
 
-    <!--End Main Container -->
+<div class="row container-kamn">
+    <img src="images/slider/slide1.jpg" class="blog-post" alt="Feature-img" align="right" width="100%"/>
+</div>
 
-    <div class="copyright text center">
-        <p>&copy; Copyright 2018, <a href="#">Your Website Link</a>. About 交易服务 - Collect from <a href="#" title="消息来源" target="_blank">消息来源</a></p>
+<div id="banners"></div>
+<div class="container">
+    <div class="row">
+        <div class="side-left col-sm-4 col-md-4">
+
+            <h3 class="lead"> About our Firm : </h3>
+            <hr/>
+
+            <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit
+                amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
+            <a href="#anchor1"> Our Firm's History</a><br/>
+            <a href="#anchor2"> Philosophy</a><br/>
+            <a href="#anchor3">Media / In the Press</a><br/>
+            <br/>
+            <h4>2002 - LOREM IPSUM DOLOR :</h4>
+            <hr/>
+            Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque
+            faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In
+            pellentesque faucibus.
+        </div>
+        <div class="col-sm-8 col-md-8">
+            <h3 class="lead" id="anchor1"> Our Firm's History </h3>
+            <hr/>
+            <p>
+                Curabitur vulputate, ligula lacinia scelrisque tempor, lacus lacus ornare ante, ac egeistas est urna sit
+                amet arcu. Class aptent taeraciti sociosqu ad litora torquent. Hibulum ante ipsum primis in faucibus
+                orci luctus et ultrices posuere cubilia Curae; Morbi euismod magna ac lorem rutrum elementum. Donec
+                viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a dolor sit amet lipsum
+                enim in.
+            </p>
+
+            <h4>2002 - LOREM IPSUM DOLOR</h4>
+            <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque
+                faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In
+                pellentesque faucibus.</p>
+
+            <h4>2007 - VIVAMUS HENDERIT</h4>
+            <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus
+                rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
+
+            <h4>2008 - PRAESENT ID METUS</h4>
+            <p>
+                Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie
+                magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris
+                iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at
+                risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc
+                eu ullamcorper orci. Quisque eget odio.
+            </p>
+            <h3 class="lead" id="anchor2">Our Philosophy:</h3>
+            <p>
+                Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa,
+                ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia
+                dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus
+                vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
+                luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula
+                lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit
+                amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
+                condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod
+                semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris
+                enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est
+                a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc. <br/>
+            </p>
+
+            <h3 class="lead" id="anchor3">In the Press:</h3>
+            <blockquote>
+                <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque
+                    eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla
+                    nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
+            </blockquote>
+            <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
+            <br/><br/>
+            <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor
+                mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac
+                lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim.
+                Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p>
+        </div>
     </div>
+</div>
 
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+<div class="copyright text center">
+    <p>Copyright &copy; 2018.交易服务 All rights reserved.</p>
+    <p>作者：140104300123 陈璐</p>
+</div>
+
+<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 
 </body>
 
