--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,9 +36,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand animated fadeInDownBig" href="index.html"><img src="images/slider/Office.png"
-                                                                                  width="100" alt="Office"/></a>
         </div>
+
+        <!-- 网站名 -->
+        <a class="navbar-brand" href="#">金融远期合约交易服务平台</a>
 
         <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav pull-right">
@@ -61,11 +62,6 @@
         </div>
     </div>
 </nav>
-
-<!--End Header -->
-
-
-<!-- Main Container -->
 
 <div class="container-fluid-kamn">
     <div class="row">
