--- a/src/main/resources/templates/demand.html
+++ b/src/main/resources/templates/demand.html
@@ -31,10 +31,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand wow fadeInDownBig" href="index.html">
-                <img src="images/slider/Office.png" width="100" alt="Office"/>
-            </a>
         </div>
+
+        <!-- 网站名 -->
+        <a class="navbar-brand" href="#">金融远期合约交易服务平台</a>
 
         <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav pull-right">
@@ -50,11 +50,19 @@
                 <li>
                     <a href="statistic.html">交易数据</a>
                 </li>
-                <li th:if="!${userLogin}">
+                <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
                 </li>
-                <li th:if="${userLogin}">
-                    <a href="login.html">欢迎！<span th:text="${user.name}"></span></a>
+                <li th:if="!${user == null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">我的合约</a></li>
+                        <li><a href="#">我的订单</a></li>
+                        <li><a href="#">我的收藏</a></li>
+                        <li><a href="#">积分商城</a></li>
+                        <li><a href="/logout">安全退出</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
