--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,19 +3,16 @@
 <head>
 
     <meta charset="utf-8"/>
-    <title>Office</title>
+    <title>金融远期合约交易服务平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+    <meta name="description" content="金融远期合约交易服务平台"/>
+    <meta name="author" content="chenlu"/>
     <link rel="shortcut icon" href="images/ico/favicon.ico"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/buttons.css"/>
 
 </head>
 <body>
@@ -31,11 +28,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand wow fadeInDownBig" href="index.html">
-                <img class="office-logo" src="images/slider/Office.png" alt="Office"/>
-            </a>
         </div>
+
+        <!-- 网站名 -->
+        <a class="navbar-brand" href="#">金融远期合约交易服务平台</a>
 
         <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav pull-right">
@@ -51,11 +47,18 @@
                 <li>
                     <a href="statistic.html">交易数据</a>
                 </li>
-                <li th:if="!${userLogin}">
+                <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
                 </li>
-                <li th:if="${userLogin}">
-                    <a href="login.html">欢迎！<span th:text="${user.name}"></span></a>
+                <li th:if="!${user == null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/mydemand">我的合约</a></li>
+                        <li><a href="#">我的订单</a></li>
+                        <li><a href="#">积分商城</a></li>
+                        <li><a href="/logout">安全退出</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -75,28 +78,29 @@
 
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="images/slider/slide2.jpg" height="400" alt="Image of first carousel"/>
+                        <img src="images/slider/sliderm1.jpg" height="400" alt="Image of first carousel"/>
                         <div class="carousel-caption">
-                            <h3 class="carousel-title hidden-xs">Office BOOTSTRAP TEMPLATE</h3>
-                            <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">Top10 好物</a>
+                            <p class="carousel-body">精选 精挑</p>
                         </div>
                     </div>
 
                     <div class="item">
-                        <img src="images/slider/slide4.jpg" height="400" alt="Image of second carousel"/>
+                        <img src="images/slider/sliderm2.jpg" height="400" alt="Image of third carousel"/>
                         <div class="carousel-caption">
-                            <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                            <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">大事件</a>
+                            <p class="carousel-body">每天十分钟，陪你一起读新闻</p>
                         </div>
                     </div>
 
                     <div class="item">
-                        <img src="images/slider/slide2.jpg" height="400" alt="Image of third carousel"/>
+                        <img src="images/slider/sliderm3.jpg" height="400" alt="Image of second carousel"/>
                         <div class="carousel-caption">
-                            <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                            <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">智能匹配</a>
+                            <p class="carousel-body">快速定位你可能喜欢的</p>
                         </div>
                     </div>
+
                 </div>
 
                 <a class="left carousel-control" href="#carousel-1" data-slide="prev">
@@ -109,15 +113,13 @@
         </div>
     </div>
 </section>
-<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" title="网站模板">网站模板</a></div>
-
 
 <section id="services" class="services-section section-global-wrapper">
     <div class="container">
         <div class="row">
             <div class="services-header">
-                <h3 class="services-header-title">Our Mission</h3>
-                <p class="services-header-body"><em> Things we provide in Office </em></p>
+                <h3 class="services-header-title">金融合约产品</h3>
+                <p class="services-header-body"><em>精挑 ·细选</em></p>
                 <hr/>
             </div>
         </div>
