--- a/src/main/resources/templates/statistic.html
+++ b/src/main/resources/templates/statistic.html
@@ -2,20 +2,15 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-    <title>Office</title>
+    <title>金融远期合约交易服务平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-
-    <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css"/>
-
-
-    <!-- Favicon and touch icons -->
     <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
@@ -23,10 +18,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
 </head>
 
-
 <body>
-
-<!-- Header -->
 
 <nav id="navbar-section" class="navbar navbar-default navbar-static-top navbar-sticky" role="navigation">
     <div class="container">
@@ -39,9 +31,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand wow fadeInDownBig" href="index.html"><img src="images/slider/Office.png" width="100"
-                                                                             alt="Office"/></a>
         </div>
+
+        <!-- 网站名 -->
+        <a class="navbar-brand" href="#">金融远期合约交易服务平台</a>
 
         <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav pull-right">
@@ -57,11 +50,18 @@
                 <li class="active">
                     <a href="statistic.html">交易数据</a>
                 </li>
-                <li th:if="!${userLogin}">
+                <li th:if="${user == null}">
                     <a href="login.html"><span>登录</span></a>
                 </li>
-                <li th:if="${userLogin}">
-                    <a href="login.html">欢迎！<span th:text="${user.name}"></span></a>
+                <li th:if="!${user == null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">欢迎！<span th:text="${user.name}"></span><span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">我的合约</a></li>
+                        <li><a href="#">我的订单</a></li>
+                        <li><a href="#">积分商城</a></li>
+                        <li><a href="/logout">安全退出</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
