--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,6 @@
 
 <nav id="navbar-section" class="navbar navbar-default navbar-static-top navbar-sticky" role="navigation">
     <div class="container">
-
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target=".navbar-responsive-collapse">
@@ -29,10 +28,8 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-
         <!-- 网站名 -->
         <a class="navbar-brand" href="#">金融远期合约交易服务平台</a>
-
         <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active">
@@ -80,7 +77,7 @@
                     <div class="item active">
                         <img src="images/slider/sliderm1.jpg" height="400" alt="Image of first carousel"/>
                         <div class="carousel-caption">
-                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">Top10 好物</a>
+                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">Top10 大价值期货</a>
                             <p class="carousel-body">精选 精挑</p>
                         </div>
                     </div>
@@ -111,6 +108,20 @@
                 </a>
             </div>
         </div>
+    </div>
+</section>
+
+<section class="main" style="padding-top: 30px;">
+    <div class="container">
+        <dl class="main-data">
+            <dt>
+                <span class="glyphicon glyphicon-home" aria-hidden="true" style="float: left;margin-right: 30px;"></span>
+                <h3>数据统计</h3>
+            </dt>
+            <span>累计交易额：235231</span>
+            <span style="margin-left: 360px;">已达成合约量：235231</span>
+            <span style="float: right;margin-right: 0;">累计注册人数：235231</span>
+        </dl>
     </div>
 </section>
 
