--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -11,14 +11,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
-    <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css"/>
     <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
 </head>
-
 <body>
 
 <nav id="navbar-section" class="navbar navbar-default navbar-static-top navbar-sticky" role="navigation">
@@ -76,81 +70,47 @@
 <div id="banners"></div>
 <div class="container">
     <div class="row">
-        <div class="side-left col-sm-4 col-md-4">
-
-            <h3 class="lead"> About our Firm : </h3>
+        <div class="side-left col-sm-3 col-md-3">
+            <h3 class="lead">什么是远期合约？</h3>
             <hr/>
+            <p>
+                远期合约是交易双方约定在未来的某一确定时间，以确定的价格买卖一定数量的某种金融资产的合约。合约规定交易
+                的标的物、有效期和交割时的执行价格等项内容，是一种保值工具。是必须履行的协议。远期合约主要有远期利率协议、
+                远期外汇合约、远期股票合约。远期合约是现金交易，买方和卖方达成协议在未来的某一特定FI期交割一定质量和数量的
+                商品。价格可以预先确定或在交割时确定。远期合约是场外交易，交易双方都存在风险。如果即期价格低于远期价格，
+                市场状况被描述为正向市场或溢价。如果即期价格高于远期价格，市场状况被描述为反向市场或差价。</p>
 
-            <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit
-                amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
-            <a href="#anchor1"> Our Firm's History</a><br/>
-            <a href="#anchor2"> Philosophy</a><br/>
-            <a href="#anchor3">Media / In the Press</a><br/>
             <br/>
-            <h4>2002 - LOREM IPSUM DOLOR :</h4>
+            <h4>远期合约的意义和价值？</h4>
             <hr/>
             Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque
             faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In
             pellentesque faucibus.
         </div>
-        <div class="col-sm-8 col-md-8">
-            <h3 class="lead" id="anchor1"> Our Firm's History </h3>
-            <hr/>
-            <p>
-                Curabitur vulputate, ligula lacinia scelrisque tempor, lacus lacus ornare ante, ac egeistas est urna sit
-                amet arcu. Class aptent taeraciti sociosqu ad litora torquent. Hibulum ante ipsum primis in faucibus
-                orci luctus et ultrices posuere cubilia Curae; Morbi euismod magna ac lorem rutrum elementum. Donec
-                viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a dolor sit amet lipsum
-                enim in.
-            </p>
+        <div class="col-sm-9 col-md-9">
+            <div>
+                <h3 class="lead" id="anchor1">财经新闻速递</h3>
+                <p>
+                    <small>带您一起纵览财经新闻实时。</small>
+                </p>
+                <hr/>
 
-            <h4>2002 - LOREM IPSUM DOLOR</h4>
-            <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque
-                faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In
-                pellentesque faucibus.</p>
-
-            <h4>2007 - VIVAMUS HENDERIT</h4>
-            <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus
-                rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
-
-            <h4>2008 - PRAESENT ID METUS</h4>
-            <p>
-                Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie
-                magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris
-                iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at
-                risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc
-                eu ullamcorper orci. Quisque eget odio.
-            </p>
-            <h3 class="lead" id="anchor2">Our Philosophy:</h3>
-            <p>
-                Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa,
-                ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia
-                dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus
-                vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-                luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula
-                lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent
-                taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit
-                amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-                cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
-                condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod
-                semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris
-                enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est
-                a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc. <br/>
-            </p>
-
-            <h3 class="lead" id="anchor3">In the Press:</h3>
-            <blockquote>
-                <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque
-                    eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla
-                    nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
-            </blockquote>
-            <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
-            <br/><br/>
-            <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor
-                mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac
-                lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim.
-                Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p>
+                <div style="font-size: 1em; padding-bottom: 14px;" th:each="item, newStat : ${news}">
+                    <h4><strong><span th:text="${item.title}"></span></strong></h4>
+                    <div style="padding: 16px;">
+                        <em>来源：<span th:text="${item.author_name}"></span></em>
+                        <em style="float: right;">时间：<span th:text="${item.date}"></span></em><br/>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-md-4">
+                            <a th:href="@{${item.url}}" class="thumbnail">
+                                <img th:attr="src=@{${item.thumbnail_pic_s}}" alt="..." />
+                            </a>
+                        </div>
+                    </div>
+                    <p><a th:href="@{${item.url}}"><span th:text="${item.url}"></span></a></p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
