--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,15 +42,15 @@
 }
 
 
-@media (min-width: 1068px) and (max-width: 1400px) { 
+@media (min-width: 1068px) and (max-width: 1400px) {
  .post-sidebar{
     margin-top: 15px;
     border:1px solid #DDD;
     padding: 5px;
   }
- 
+
 }
-@media (min-width: 750px) and (max-width: 1060px) { 
+@media (min-width: 750px) and (max-width: 1060px) {
  .post-sidebar{
     width:204px;
     margin-top: 15px;
@@ -64,7 +64,7 @@
   width: 100%;
 }
 .blog-post{
- margin-bottom: 30px;   
+ margin-bottom: 30px;
 }
 .blog-image{
     margin-bottom: 20px;
@@ -117,7 +117,7 @@ float: right;
 
 
 .title-text{
-  font-family: 'Raleway', sans-serif;  
+  font-family: 'Raleway', sans-serif;
   letter-spacing: .2px;
   font-size: 40px;
 }
@@ -139,7 +139,7 @@ body {
     font-size: 15px;
     line-height: 24px;
     background:#F8FAFF;
-   
+
 }
 
 a {
@@ -160,21 +160,21 @@ address {
     }
 
 
-@media (min-width: 50px) and (max-width: 988px) { 
- 
+@media (min-width: 50px) and (max-width: 988px) {
+
  address {
     margin-top: 28px;
     margin-left: 21px;
     }
- 
+
 }
-@media (min-width: 988px) and (max-width: 1200px) { 
- 
+@media (min-width: 988px) and (max-width: 1200px) {
+
  address {
     margin-top: 28px;
     margin-left: -58px;
     }
- 
+
 }
 /*
 * ==========================================================================
@@ -241,7 +241,7 @@ address {
 * Brand / Project Name
 * ==========================================================================
 */
-.navbar-brand {  
+.navbar-brand {
   z-index: 9999px;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   font-size: 28px;
@@ -255,8 +255,8 @@ address {
   padding: 30px;
   letter-spacing: .9px;
 }
-@media (min-width: 800px){ 
- 
+@media (min-width: 800px){
+
     .side-left{
   height: 1248px;
 }
@@ -270,7 +270,7 @@ address {
     }
 
 #banners{
-    
+
     margin-top: 30px;
     margin-bottom: 10px;
 }
@@ -281,8 +281,8 @@ address {
     padding-top: 120px;
 }
 
-@media (min-width: 100px) and (max-width: 800px) { 
- 
+@media (min-width: 100px) and (max-width: 800px) {
+
     #banner-home{
     background-image:url('../img/slider/1.jpg');
     height:450px;
@@ -310,15 +310,15 @@ address {
     padding: 30px 10px;
     /*background: url(../img/logo.png) 20px center no-repeat; */
 }
-@media (min-width: 50px) and (max-width: 768px) { 
+@media (min-width: 50px) and (max-width: 768px) {
         .header a.brand {
         width: 170px;
         margin-top:-41px;
         margin-top: -41px;
         position: absolute;
         font-size: 37px;
-     } 
- }  
+     }
+ }
 
 .paragraph-text{
     text-align: justify;
@@ -348,7 +348,7 @@ address {
     padding: 0px 15px 15px 0;
 
 }
-p.blog-text{   
+p.blog-text{
     font-size: 16px;
     letter-spacing: .1px;
     font-family: 'Arial';
@@ -364,7 +364,7 @@ p.blog-text{
   width: 100px;
 }
 
-@media (max-width: 768px){ 
+@media (max-width: 768px){
     .office-logo{
       height: 100px;
       width: 60px;
@@ -455,8 +455,8 @@ p.blog-text{
     padding: 0 10px 0 10px;
     color: white;
     background: #1BBD9B;
-    border-radius: 3px; 
-    transition:.4s;  
+    border-radius: 3px;
+    transition:.4s;
 }
 .services-group{
   padding: 10px;
@@ -492,7 +492,7 @@ footer .widget i {
 }
 footer{
    margin-top:40px;
-   padding: 20px; 
+   padding: 20px;
    background: black;
 }
 
@@ -538,20 +538,20 @@ footer h3 {
         margin-top: 10px;
         padding: 0;
     }
- 
+
     #custom-search-input .search-query {
         padding-right: 3px;
         padding-right: 4px \9;
         padding-left: 3px;
         padding-left: 4px \9;
         /* IE7-8 doesn't have border-radius, so don't indent the padding */
- 
+
         margin-bottom: 0;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px;
     }
- 
+
     #custom-search-input button {
         border: 0;
         background: none;
@@ -567,12 +567,12 @@ footer h3 {
         border-radius: 3px;
         color:#D9230F;
     }
- 
+
     .search-query:focus + button {
-        z-index: 3;   
+        z-index: 3;
     }
 
-   
+
     /*
 * ==========================================================================
 * Image Card
@@ -666,7 +666,7 @@ footer h3 {
 * ==========================================================================
 */
 .panel-image {
-    position: relative;   
+    position: relative;
 }
 .panel-image img.panel-image-preview {
     width: 100%;
@@ -693,7 +693,7 @@ footer h3 {
 .panel-image ~ input[type=checkbox] {
     position:absolute;
     top:- 30px;
-    z-index: -1;   
+    z-index: -1;
 }
 
 .panel-image ~ input[type=checkbox] ~ .panel-body {
@@ -737,5 +737,20 @@ footer h3 {
   }
   .carousel-caption .carousel-title {
     font-size: 14px;
+  }
+
+  .main {
+      width: 1200px;
+      margin: 30px auto 30px auto;
+      overflow: hidden;
+  }
+  .main-data {
+      margin: 20px 0;
+      padding-top: 9px;
+      overflow: hidden;
+  }
+  .main-data span {
+      float: left;
+      margin-right: 30px;
   }
 }
